--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,16 @@
   color: #61dafb;
 }
 
+.img {
+  border: 10px solid #fff;
+  width: 65%;
+}
+
+p {
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
